--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body{
+    background: #EBF3E8
+}
+
+.datePicker{
+    background-color: #EBF3E8;
+}
